WPTheme/socialistalternative/main.css
* {
  box-sizing: border-box;
}

html {
  font-size: 20px;
  line-height: 1.3;
}

h1,
h2 {
  font-family: "Candal", sans-serif;
  font-size: 1.3rem;
}

h3 {
  font-family: "Candal", sans-serif;
  font-size: 1.2rem;
}
h4 {
  font-family: "Work Sans", sans-serif;
  font-size: 1.2rem;
  font-weight: 700;
}
h5 {
  font-family: "Work Sans", sans-serif;
  font-size: 1.1rem;
  font-weight: 700;
}
h6 {
  font-family: "Work Sans", sans-serif;
  font-size: 1rem;
  font-weight: 500;
}

p {
  margin: 16px 0;
  font-size: 1rem;
}

body {
  font-family: sans-serif;
  padding: 0px;
  margin: 0px;
  background-color: rgb(245, 248, 223);
  overflow-x: hidden;
}

.size-medium {
  width: 30%;
  float: right;
  margin-right: 0;
}

figcaption {
  font-size: 0.5rem;
  text-align: center;
  overflow-wrap: break-word;
}

.wp-block-quote {
  width: 80%;
  margin: auto;
  text-align: right;
  color: rgb(52, 83, 120);
}

.wp-block-quote p {
  font-size: 1.2rem;
  font-weight: lighter;
}

.wp-block-image img {
  height: 100%;
  width: 100%;
}

.salt-cat-title {
  margin: 0px;
  color: #fff;
  font-size: 48px;
  padding-left: 17px;
}

.salt-bodycontainer {
  font-size: 0px;
  min-height: calc(100vh - 300px);
  display: grid;
  grid-template-columns: 1fr;
  grid-auto-columns: minmax(auto, 25%);
  grid-auto-flow: column;
}
.salt-bodycontainer > * {
  font-size: 1rem;
}

.salt-nomargin,
.salt-fullwidth .salt-maincontent {
  margin: 0;
  max-width: 100%;
  border: none;
}
@media (min-width: 450px) {
  .wp-block-quote {
    float: right;
    margin-right: 0;
    text-align: right;
    max-width: 50%;
  }
}

@media (min-width: 768px) {
  h1,
  h2 {
    font-size: 1.5rem;
  }

  h3 {
    font-size: 1.3rem;
  }
  h4 {
    font-size: 1.3rem;
    font-weight: 700;
  }
  h5 {
    font-size: 1.2rem;
    font-weight: 700;
  }
  h6 {
    font-size: 1rem;
    font-weight: 500;
  }
}

/* Header and navbar */
.salt-mainheader nav li:hover .sub-menu {
  max-height: 100vw;
}
.salt-mainheader nav .sub-menu {
  max-height: 0px;
  transition: max-height 0.4s;
  position: absolute;
  z-index: 99;
  background-color: #0c0824;
  display: block;
  margin-left: -23px;
  overflow: hidden;
  margin-top: 6px;
}
.salt-mainheader nav .sub-menu li {
  display: block;
  padding: 11px 23px;
}

.salt-sidebar {
  display: inline-block;
  vertical-align: top;
}

.salt-maincontent + .salt-sidebar {
  border-left: 3px solid black;
  margin: 0;
}

.salt-nomargin + .salt-sidebar {
  border-left: none;
  margin: 0;
}

.salt-mainheader {
  background: linear-gradient(rgba(12, 8, 36, 0.8), rgba(12, 8, 36, 0.8)),
    url("resources/headerimage.jpg");
  background-size: cover;
  background-position-y: top;
  position: relative;
  display: grid;
  grid-template-columns: 3fr 1fr;
  width: 100vw;
}
.salt-mainheader h1 {
  margin: 0px;
  padding: 7px;
}
.salt-mainheader h1 img {
  width: 100%;
  margin: 18px auto 10px 30px;
}

.navicon {
  width: 50%;
  margin: auto 40px auto auto;
  display: none;
}

.menu-btn {
  display: none;
}

.menu-icon {
  display: block;
  position: absolute;
  top: 34px;
  right: 30px;
  color: rgb(245, 248, 223);
  font-size: 2.5rem;
  cursor: pointer;
}

.menu-close-btn {
  color: rgb(245, 248, 223);
  margin: 30px 30px 0 0;
  float: right;
  font-size: 2.5rem;
  cursor: pointer;
}

.salt-mainmenu {
  z-index: 1;
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
}

.salt-mainmenu .menu-btn ~ .menu {
  background-color: rgb(12, 8, 36);
  right: calc(-50% - 18px);
  transition: right 0.5s linear;
  position: absolute;
  height: fit-content;
  min-height: 100vh;
  box-shadow: -11px 0px 16px 0px rgba(0, 0, 0, 0.75);
  width: 50%;
  display: block;
  color: rgb(249, 249, 228);
  font-weight: 700;
  font-size: 18px;
  z-index: 2;
}

.salt-mainmenu .menu-btn:checked ~ .menu {
  right: 0;
}

.salt-mainmenu ul {
  list-style-type: none;
  padding: 0px;
  margin: 70px 25px 10px 25px;
}
.salt-mainmenu li {
  list-style-type: none;
  padding: 0px;
  margin: 0px;
  padding: 10px 0px;
  text-transform: uppercase;
}
.salt-mainmenu li:hover,
.salt-mainmenu .sub-menu li:hover {
  color: yellow;
}

.salt-mainmenu .sub-menu li {
  color: rgb(249, 249, 228);
}

.salt-mainmenu a {
  color: inherit;
  text-decoration: none;
  white-space: nowrap;
}

.salt-navsearch {
  display: block;
  margin: 0 25px 20px;
}

.salt-mainsearch {
  display: none;
}

.searchbar input {
  background: none;
  border: none;
  color: #fff;
  border-bottom: 2px solid #959595;
  font-size: 0.8rem;
}

.salt-mainmenu nav .sub-menu {
  z-index: 99;
  display: block;
  margin-top: 6px;
  margin-bottom: 6px;
  border-left: solid 3px rgb(249, 249, 228);
  padding-left: 10px;
  margin-left: 15px;
  text-transform: capitalize;
  font-size: 0.7rem;
}
/* ... */

